<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.worlo.cep_mvp.main.endereco_mvp.EnderecoFragment">

    <LinearLayout
        android:id="@+id/linear_endereco"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_padrao_campos"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/padding_padrao_campos">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="4dp"
                android:src="@mipmap/ic_account_balance"/>

            <Spinner
                android:id="@+id/spinner_estados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:paddingTop="@dimen/padding_padrao_campos"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:paddingBottom="@dimen/padding_padrao_campos"
            android:paddingTop="@dimen/padding_padrao_campos">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@mipmap/ic_location_city"/>

            <EditText
                android:id="@+id/edt_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:background="@drawable/shape"
                android:paddingBottom="@dimen/padding_padrao_campos"
                android:paddingTop="@dimen/padding_padrao_campos"
                android:textColor="@color/textColorSecondary"
                android:hint="@string/hint_cidade"
                android:textSize="@dimen/text_size_campos"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:paddingBottom="@dimen/padding_padrao_campos"
            android:paddingTop="@dimen/padding_padrao_campos">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:src="@mipmap/ic_ic_traffic_black_24dp" />

            <EditText
                android:id="@+id/edt_logradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorSecondary"
                android:background="@drawable/shape"
                android:maxLength="50"
                android:hint="@string/hint_logradouro"
                android:textSize="@dimen/text_size_campos"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_endereco_limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_limpar"
            android:textColor="@color/textColorSecondaryLabel"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:paddingBottom="@dimen/margin_bottom"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_endereco_pesquisar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pesquisar"
                android:background="@drawable/shape_buttom"
                android:textColor="@color/textColorPrimary"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
